WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
274481
[WebGPU] Destroyed buffers or textures only invalidate their most recent command buffer
https://bugs.webkit.org/show_bug.cgi?id=274481
Summary
[WebGPU] Destroyed buffers or textures only invalidate their most recent comm...
Mike Wyrzykowski
Reported
2024-05-21 13:25:15 PDT
[WebGPU] Destroyed buffers or textures only invalidate their most recent command buffer
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-21 13:25:32 PDT
<
rdar://problem/128489902
>
Mike Wyrzykowski
Comment 2
2024-05-21 14:28:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28869
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug